# VibeShift

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: cost.py  discover.py  images.py  providers.py  style_prompts.py  transform.py
backend/app/core/: config.py  errors.py  schemas.py
backend/app/core/provider_adapters/: openai_compatible.py
backend/app/services/: cache_service.py  chunking_service.py  content_cleaner.py  content_fetcher.py  cost_estimator.py  discover_service.py  image_service.py  llm_service.py  prompt_builder.py  search_service.py  source_resolver.py  style_prompt_optimizer.py  transform_service.py  workflow_service.py
backend/app/tests/: test_chunking_service.py  test_content_cleaner.py  test_cost_estimate_api.py  test_cost_estimate_uses_cache.py  test_cost_estimator_service.py  test_discover_api.py  test_error_redaction.py  test_image_service_retry.py  test_images_regenerate_api.py  test_ollama_adapter.py  test_search_service.py  test_smart_image_mode.py  test_source_resolver.py  test_style_profile_prompting.py  test_style_prompt_optimize_api.py  test_style_template_rendering.py  test_transform_api.py  test_transform_async_images.py  test_transform_chunk_flow.py  test_url_cache_behavior.py  test_validation_error_mapping.py
docs/: deployment.md  skills.md  style-evaluation.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
searxng/: settings.yml
(+66 files in other folders)
